--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Fendi, Take Me to Eat!
 email: fenditakemetoeat@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: "Easy recipes, honest coffee reviews, and budget-friendly cooking tips for home cooks and college students."
 twitter_username: username
 github_username: username
 minimal_mistakes_skin: default
