--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: fenditakemetoeat@gmail.com
 description: "Easy recipes, honest coffee reviews, and budget-friendly cooking tips for home cooks and college students."
 twitter_username: username
 github_username: username
-minimal_mistakes_skin: default
+minimal_mistakes_skin: "dirt"
 search: true
 
 # Build settings
