--- a/_config.yml
+++ b/_config.yml
@@ -63,14 +63,14 @@ author:
       icon: "fas fa-fw fa-link"
       url: "https://"
     - label: "Reddit"
-      icon: "fas fa-fw fa-square-reddit" 
-      url: "https://reddit.com"
+      icon: "fab fa-fw fa-square-reddit" 
+      url: "https://www.reddit.com/user/takemetoeat/"
     # - label: "Twitter"
     #   icon: "fab fa-fw fa-twitter-square"
     #   url: "https://twitter.com/"
-    # - label: "GitHub"
-    #   icon: "fab fa-fw fa-github"
-    #   url: "https://github.com/"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/fendihalim/takemetoeat"
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
     #   url: "https://instagram.com/"
