--- a/_config.yml
+++ b/_config.yml
@@ -62,15 +62,15 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://fendihalim.github.io/takemetoeat/"
-    - label: "Reddit"
-      icon: "fab fa-fw fa-square-reddit" 
-      url: "https://www.reddit.com/user/takemetoeat/"
+    # - label: "Reddit"
+    #   icon: "fab fa-fw fa-square-reddit" 
+    #   url: "https://www.reddit.com/user/takemetoeat/"
     # - label: "Twitter"
     #   icon: "fab fa-fw fa-twitter-square"
     #   url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/fendihalim/takemetoeat"
+    # - label: "GitHub"
+    #   icon: "fab fa-fw fa-github"
+    #   url: "https://github.com/fendihalim/takemetoeat"
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
     #   url: "https://instagram.com/"
@@ -80,12 +80,12 @@ footer:
     # - label: "Twitter"
     #   icon: "fab fa-fw fa-twitter-square"
     #   url: "https://twitter.com/"
-    - label: "Reddit"
-      icon: "fab fa-fw fa-square-reddit" 
-      url: "https://www.reddit.com/user/takemetoeat/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/fendihalim/takemetoeat"
+    # - label: "Reddit"
+    #   icon: "fab fa-fw fa-square-reddit" 
+    #   url: "https://www.reddit.com/user/takemetoeat/"
+    # - label: "GitHub"
+    #   icon: "fab fa-fw fa-github"
+    #   url: "https://github.com/fendihalim/takemetoeat"
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
     #   url: "https://instagram.com/"
