--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ author:
   name   : "Fendi Tjoa "
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "A passionate home cook and food lover sharing easy recipes, honest reviews, and kitchen tips for everyday eaters"
-  location: "Toronto, Ontario, 🇨🇦 CANADA"
+  location: "Toronto, Ontario, CANADA [CANADA]"
   email: fenditakemetoeat@gmail.com
   links:
     - label: "Website"
