--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 locale: "en-US"
 title: Fendi, Take Me to Eat! # Title on the both website header (masthead) and the website tab"
 title_separator: "-"
-masthead_title: "Take me To Eat!" # This will override the website header (it's called masthead)
+masthead_title: "Take Me To Eat!" # This will override the website header (it's called masthead)
 name: "Fendi Tjoa"
 url: "https://fendihalim.github.io/" # not sure if needed to be writte. initially a blank
 baseurl: "/takemetoeat" # not sure if needed to be written. initially a blank
