--- a/_config.yml
+++ b/_config.yml
@@ -125,6 +125,9 @@ comments:
   disqus:
     shortname: "takemetoeat"
 
+atom_feed:
+  hide: true
+
 category_archive:
   type: liquid
   path: /categories/
