--- a/_config.yml
+++ b/_config.yml
@@ -129,6 +129,10 @@ atom_feed:
   hide: true
 lunr:
   search_within_pages: true
+google_site_verification: "RTGRSh1HCRm0YlRRyeJiagDUW5wtJ8df6KKZpO4g0G8"
+
+
+  
 category_archive:
   type: liquid
   path: /categories/
