--- a/_config.yml
+++ b/_config.yml
@@ -113,6 +113,17 @@ defaults:
       share: true
       related: true
       show_date: true
+  - scope:
+      path: ""
+      type: journals
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+      show_date: true
   # _pages
   - scope:
       path: "_pages"
