--- a/_config.yml
+++ b/_config.yml
@@ -113,6 +113,18 @@ defaults:
       share: true
       related: true
       show_date: true
+  # _journals
+    - scope:
+      path: "_journals"
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+      show_date: true
   # _pages
   - scope:
       path: "_pages"
